# ComfyUI-Flux-Prompt-Tools

./: __init__.py  pyproject.toml  requirements.txt
nodes/: flux-prompt-enhance-node.py  flux-prompt-gemini-flash-node.py  flux-prompt-generator.py  minicpm-v-2-6-int4-node.py
workflow/: Flux Prompt Gemini.json
